# LibtorchLoad

./: CMakeLists.txt  main.cpp
